<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="PlaceListViewModel"
            type="com.akkeritech.android.travellogue.PlaceListViewModel" />
    </data>

    <!-- Start of the visible fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageView
            android:id="@+id/detail_view_bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:contentDescription="@string/background" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".PlaceDetailViewFragment">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_margin="10dp"
                    android:layout_marginTop="16dp"
                    app:cardElevation="8dp"
                    app:cardCornerRadius="20dp"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_editor_absoluteX="10dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <View
                            android:id="@+id/view"
                            android:layout_width="15dp"
                            android:layout_height="wrap_content"
                            android:background="#009688"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <View
                            android:id="@+id/divider"
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:layout_marginStart="16dp"
                            android:background="?android:attr/listDivider"
                            app:layout_constraintStart_toEndOf="@+id/imageView"
                            tools:layout_editor_absoluteY="16dp" />

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:scaleType="centerCrop"
                            app:layout_constraintStart_toEndOf="@+id/view"
                            app:layout_constraintTop_toTopOf="parent"
                            android:contentDescription="@string/main_picture_in_place_list" />

                        <RatingBar
                            android:id="@+id/ratingBar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:numStars="4"
                            android:isIndicator="true"
                            android:rating="@{PlaceListViewModel.place.rating}"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="@+id/divider2"
                            app:layout_constraintTop_toBottomOf="@+id/divider2" />

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:fontFamily="@font/special_elite"
                            android:text="5/16/21"
                            android:textColor="#3F51B5"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/divider"
                            app:layout_constraintStart_toEndOf="@+id/view" />

                        <TextView
                            android:id="@+id/place_detail_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:fontFamily="@font/special_elite"
                            android:text="@{PlaceListViewModel.place.name}"
                            android:textColor="#AE261C"
                            android:textSize="24sp"
                            app:layout_constraintStart_toEndOf="@+id/divider"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/coordinates_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/special_elite"
                            android:textColor="#3F51B5"
                            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                            app:layout_constraintStart_toEndOf="@+id/imageView2"
                            app:layout_constraintTop_toTopOf="@+id/imageView2" />

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="8dp"
                            app:layout_constraintStart_toEndOf="@+id/divider"
                            app:layout_constraintTop_toBottomOf="@+id/place_detail_name"
                            app:srcCompat="@drawable/ic_baseline_location_on_24"
                            android:contentDescription="@string/map_pin_icon" />

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:fontFamily="@font/special_elite"
                            android:text="@string/added"
                            android:textColor="#AE261C"
                            app:layout_constraintBottom_toTopOf="@+id/textView"
                            app:layout_constraintEnd_toStartOf="@+id/divider"
                            app:layout_constraintStart_toEndOf="@+id/view" />

                        <View
                            android:id="@+id/divider2"
                            android:layout_width="0dp"
                            android:layout_height="1dp"
                            android:background="?android:attr/listDivider"
                            app:layout_constraintBottom_toTopOf="@+id/textView4"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/divider"
                            app:layout_constraintTop_toBottomOf="@+id/imageView" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginTop="16dp"
                    app:cardElevation="8dp"
                    app:cardCornerRadius="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/cardView"
                    tools:layout_editor_absoluteX="10dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <View
                            android:id="@+id/view2"
                            android:layout_width="15dp"
                            android:layout_height="0dp"
                            android:background="#009688"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/place_notes"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginBottom="16dp"
                            android:text="@{PlaceListViewModel.place.notes}"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/view2"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginTop="16dp"
                    app:cardElevation="8dp"
                    app:cardCornerRadius="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/cardView2"
                    tools:layout_editor_absoluteX="10dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <View
                            android:id="@+id/view3"
                            android:layout_width="15dp"
                            android:layout_height="0dp"
                            android:background="#009688"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <Button
                            android:id="@+id/to_camera_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/camera"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/map_button"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toEndOf="@+id/view3"
                            app:layout_constraintTop_toTopOf="parent" />

                        <Button
                            android:id="@+id/photos_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/photos"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toEndOf="@+id/map_button"
                            app:layout_constraintTop_toTopOf="parent" />

                        <Button
                            android:id="@+id/map_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/map"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/photos_button"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toEndOf="@+id/to_camera_button"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.0" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>